k8s/apps/leachnet/ln-media/iptv/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tvheadend
spec:
  selector:
    matchLabels:
      app: tvheadend
  replicas: 1
  serviceName: "tvheadend"
  template:
    metadata:
      labels:
        app: tvheadend
    spec:
      containers:
        - name: tvh
          image: ghcr.io/linuxserver/tvheadend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 9981
            protocol: TCP
            name: http
          - containerPort: 9982
            protocol: TCP
            name: rtsp
          resources:
            requests:
              duck.moe/tuner-dvb-s: "2"
              duck.moe/tuner-dvb-t: "2"
            limits:
              duck.moe/tuner-dvb-s: "2"
              duck.moe/tuner-dvb-t: "2"
          #resources:
          #  requests:
          #    memory: "250Mi"
          #    cpu: "500m"
          #  limits:
          #    memory: "2Gi"
          #    cpu: "2"
          securityContext:
            privileged: true
            procMount: Default
          volumeMounts:
          - name: config
            mountPath: /config
          - name: timeshift
            mountPath: /timeshift
          - name: recordings
            mountPath: /recordings
          - name: dev-dvb
            mountPath: /dev/dvb
          - name: dev-dri
            mountPath: /dev/dri
          # livenessProbe:
          #   httpGet:
          #    path: /
          #    port: 8080
          #  initialDelaySeconds: 20
          #  periodSeconds: 5
      volumes:
      - name: dev-dvb
        hostPath:
          path: /dev/dvb
          type: Directory
      - name: dev-dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: timeshift
        emptyDir:
      # temporary directory for recordings, will eventually be pointed at storage
      - name: recordings
        emptyDir:
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 200Mi
