k8s/apps/leachnet/ln-media/iptv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tvheadend
spec:
  ports:
  - name: http
    port: 9981
    targetPort: http
  - name: rtsp
    port: 9982
    targetPort: rtsp
  selector:
    app: tvheadend
---
apiVersion: v1
kind: Service
metadata:
  name: plexheadend
spec:
  ports:
  - name: http
    port: 5004
    targetPort: plex-proxy
  selector:
    app: tvheadend
