k8s/apps/leachnet/ln-media/iptv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: tvheadend-http-ingress
spec:
  rules:
  - host: iptv.net.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tvheadend
            port:
              name: http
  - host: iptv.theleachfamily.me.uk
    http: *http_rules
  tls:
  - hosts:
    - iptv.theleachfamily.me.uk
    - iptv.net.theleachfamily.me.uk
    secretName: iptv-cert
